gs/src/ttfmain.c
@@ -220,7 +220,7 @@ FontError ttfFont__Open(ttfInterpreter *tti, ttfFont *this, ttfReader *r,
 {   char sVersion[4], sVersion1[4] = {0, 1, 0, 0};
     char sVersion2[4] = {0, 2, 0, 0};
     unsigned int nNumTables, i;
-    TT_Error code;
+    TT_Error code, code1 = 0;
     int k;
     TT_Instance I;
     ttfMemory *mem = tti->ttf_memory;
@@ -328,8 +328,8 @@ FontError ttfFont__Open(ttfInterpreter *tti, ttfFont *this, ttfReader *r,
     if (code == TT_Err_Out_Of_Memory)
 	return fMemoryError;
     if (code >= TT_Err_Invalid_Opcode && code <= TT_Err_Invalid_Displacement)
-	return fBadInstruction;
-    if (code)
+	code1 = fBadInstruction;
+    else if (code)
 	return fBadFontData;
     I.z = this->inst;
     if (design_grid)
@@ -349,6 +349,8 @@ FontError ttfFont__Open(ttfInterpreter *tti, ttfFont *this, ttfReader *r,
 	return fBadInstruction;
     if (code)
 	return fBadFontData;
+    if (code1)
+	return code1;
     return code;
 }
 
